[metadata]
name = tio
description-file = README.md
version = 3.6.2
description = Helper libraries and utils for Twinleaf I/O (TIO) devices
long_description = Twinleaf I/O is a serialization for kilohertz rate data from data-intensive sensors connected by serial ports or tunneled through TCP.
url = https://github.com/twinleaf/tio-python
author = Thomas Kornack
author_email = kornack@twinleaf.com
license = MIT

[options]
python_requires = >=3.6
packages =
	tio
	slip
	tldevice
	tldevicesync
install_requires=
		PyYAML
		pyserial
		blessings
		hexdump
scripts=
		examples/itio.py
		examples/tio-monitor.py
		examples/tio-rates.py
		examples/tio-log.py
