[metadata]
name = tio
description-file = README.md
version = 3.8.1
description = Helper libraries and utils for Twinleaf I/O (TIO) devices
long_description = Twinleaf I/O is a serialization for kilohertz rate data from data-intensive sensors connected by serial ports or tunneled through TCP.
url = https://github.com/twinleaf/tio-python
author = Thomas Kornack
author_email = kornack@twinleaf.com
license = MIT

[options]
python_requires = >=3.6
packages =
	tio
	slip
	tldevice
	tldevicesync
	tiotools
install_requires =
	PyYAML
	pyserial
	hexdump
	ipython
	blessings
	halo

[options.entry_points]
console_scripts =
	itio=tiotools.itio:main
	tiomon=tiotools.tiomon:main
	tiologparse=tiotools.tiologparse:main
